--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,53 @@ svg {
   border-radius: 10px;
 }
 
+.video-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  max-width: 800px;
+  height: 100%;
+  max-height: 450px;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1000;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.video-container {
+  position: relative;
+  width: 100%;
+  max-width: 800px;
+  height: 100%;
+  max-height: 450px;
+  background-color: black;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: transparent;
+  color: white;
+  border: none;
+  font-size: 1.5em;
+  cursor: pointer;
+}
+
+.close-btn:hover {
+  color: red;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
+}
+
 @keyframes stroke_offset {
   0%,
   25% {
