--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,9 @@ svg {
   animation: fill_offset 8s infinite;
   animation-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
   font-weight: bold;
+  max-width: 90%;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .stroke {
